Implemented Main for testing and displaying implementation